@startuml
[*] --> Initial
Initial --> Pending : Start challenge
Pending --> Running : Container started
Pending --> Failed : Error occurred
Pending --> Failed : Timeout
Running --> Stopped : Submit correct flag
Running --> Stopped : Max Attempt reached
Running --> Stopped : Timeout
Stopped --> [*]
Failed --> [*]
@enduml